# PSRayTracing

./: .gitignore  APP_PRIVACY.txt  CMakeLists.txt  LICENSE.txt  README.rst  dev_tools.sh  large_test_cases.csv  multi_build.py  run_verification_tests.py  small_test_cases.csv  test_cases.csv
assets/: earthmap.jpg.h
cli_runner/: CMakeLists.txt  Misc.cpp  Misc.h  Misc.hpp  ProgressBar.cpp  ProgressBar.h  main.cpp
experiments/: jupyter_notebook_requirements.txt  take_best_data.py
experiments/final_keyword/: final_keyword_analysis.ipynb
experiments/noexcept_keyword/: noexcept_keyword_amd_gcc_linux_book1_results.xlsx  noexcept_keyword_analysis.ipynb  noexcept_keyword_analysis_amd_gcc_linux_book1.ipynb  noexcept_keyword_test_suite_results-win_amd_1st_run.xlsx  noexcept_keyword_test_suite_results-win_amd_2nd_run.xlsx  noexcept_keyword_test_suite_results.xlsx  noexcept_list_iteration_test.cpp  noexcept_vector_search_test.cpp
experiments/random_unit_sampling_algorithms/: 2d_and_3d_sampling_algorithms.ipynb  Makefile  comparing_greedy_vs_analytical.cpp  comparing_greedy_vs_analytical.py  comparing_greedy_vs_analytical_results.xlsx  psrt_rejection_vs_analytical_test_suite_results.xlsx  rejection_vs_analytical_analysis.ipynb
experiments/random_unit_sampling_algorithms/assembly_output/: analytical_in_unit_disk_gcc_14.2_O0.asm  analytical_in_unit_disk_gcc_14.2_O3.asm  rejection_in_unit_disk_gcc_14.2_O0.asm  rejection_in_unit_disk_gcc_14.2_O3.asm
final_keyword_experiment/: final_keyword_analysis.ipynb  final_keyword_test_suite_results.xlsx
images/: README.txt
qt_ui/: CMakeLists.txt  PSRayTracingRenderer.cpp  PSRayTracingRenderer.h  PSRayTracingRenderer.hpp  README.rst  Settings.cpp  Settings.h  UIMathHelper.cpp  UIMathHelper.h  Utils.cpp  Utils.h  main.cpp  main.qml  qml.qrc
qt_ui/android/: .gitignore  AndroidManifest.xml
qt_ui/android/src/net/sixteenbpp/psraytracing/: AndroidUtils.java
qt_ui/apple/: Info.plist.in  Launch.storyboard  iOSUtils.h  iOSUtils.mm
qt_ui/i18n/: qt_ui_de_DE.ts  qt_ui_en_US.ts  qt_ui_ja_JP.ts  qtquickcontrols2_ja_JP.conf
qt_ui/imports/SixteenBPP/: ControlsBar.qml  Messages.qml  RenderSettingsForm.qml  UITheme.qml  qmldir
qt_ui/imports/SixteenBPP/Views/: AboutView.qml  RenderView.qml  qmldir
qt_ui/imports/SixteenBPP/Widgets/: IntegerOnlyTextField.qml  PanZoom.qml  RenderDisplay.qml  VerticalScroll.qml  qmldir
render_library/: AABB.cpp  AABB.hpp  CMakeLists.txt  ColorRGBA.cpp  ColorRGBA.h  ColorRGBA.hpp  Common.hpp  HitRecord.cpp  HitRecord.h  HitRecord.hpp  ONB.cpp  ONB.h  ONB.hpp  PDFVariant.cpp  PDFVariant.hpp  Perlin.cpp  Perlin.hpp  PerlinReal.cpp  PerlinReal.h  PerlinReal.hpp  RandomGenerator.cpp  RandomGenerator.h  RandomGenerator.hpp  Ray.cpp  Ray.hpp  RenderContext.cpp  RenderContext.h  RenderContext.hpp  RenderMethod.cpp  RenderMethod.h  RenderOutput.cpp  RenderOutput.hpp  RenderThread.cpp  RenderThread.h  RenderThread.hpp  RenderThreadPool.cpp  RenderThreadPool.h  RenderThreadPool.hpp  ScatterRecord.cpp  ScatterRecord.h  (+12 more)
render_library/Cameras/: Camera.cpp  Camera.h  Camera.hpp  MotionBlurCamera.cpp  MotionBlurCamera.h  MotionBlurCamera.hpp
render_library/Interfaces/: ICamera.h  ICamera.hpp  IDeepCopyable.hpp  IHittable.h  IHittable.hpp  IMaterial.h  IMaterial.hpp  IPDF.hpp  ITexture.hpp
render_library/Materials/: Dielectric.cpp  Dielectric.h  Dielectric.hpp  DiffuseLight.cpp  DiffuseLight.h  DiffuseLight.hpp  Isotropic.cpp  Isotropic.h  Isotropic.hpp  Lambertian.cpp  Lambertian.h  Lambertian.hpp  Metal.cpp  Metal.h  Metal.hpp  SurfaceNormal.cpp  SurfaceNormal.h  SurfaceNormal.hpp
render_library/Objects/: BVHNode.cpp  BVHNode.hpp  BVHNode_MorePerformant.cpp  BVHNode_MorePerformant.h  BVHNode_MorePerformant.hpp  Box.cpp  Box.hpp  ConstantMedium.cpp  ConstantMedium.hpp  HittableList.cpp  HittableList.h  HittableList.hpp  MovingSphere.cpp  MovingSphere.hpp  Quad.cpp  Quad.hpp  Rectangles.cpp  Rectangles.hpp  Sphere.cpp  Sphere.h  Sphere.hpp
render_library/Objects/Transform/: FlipFace.cpp  FlipFace.h  FlipFace.hpp  RotateY.cpp  RotateY.h  RotateY.hpp  Translate.cpp  Translate.h  Translate.hpp
render_library/PDFs/: CosinePDF.cpp  CosinePDF.hpp  HittablePDF.cpp  HittablePDF.h  HittablePDF.hpp  MixturePDF.cpp  MixturePDF.h  MixturePDF.hpp
render_library/Scenes/: All.h  All.hpp  Book1.cpp  Book1.h  Book1.hpp  Book2.cpp  Book2.hpp  Book3.cpp  Book3.hpp  Fun.cpp  Fun.h  Fun.hpp
render_library/Textures/: CheckerTexture.cpp  CheckerTexture.h  CheckerTexture.hpp  ImageTexture.cpp  ImageTexture.hpp  NoiseTexture.cpp  NoiseTexture.hpp  SolidColor.cpp  SolidColor.h  SolidColor.hpp
src/: AABB.cpp  AABB.h  CMakeLists.txt  CachedPool.cpp  CachedPool.h  Common.h  HitRecord.h  ONB.cpp  PDFVariant.h  Perlin.cpp  Perlin.h  PerlinReal.cpp  PerlinReal.h  RandomGenerator.h  Ray.h  RenderOutput.cpp  RenderOutput.h  RenderThread.cpp  RenderThread.h  ScatterRecord.h  SceneDescriptor.h  SimplePool.cpp  SimplePool.h  Util.cpp  Util.h  Vec3.cpp  Vec3.h  main.cpp
src/Cameras/: Camera.cpp  Camera.h  MotionBlurCamera.cpp  MotionBlurCamera.h
src/Interfaces/: ICamera.h  IDeepCopyable.h  IHittable.h  IMaterial.h  IPDF.h  ITexture.h
src/Materials/: Dielectric.cpp  Dielectric.h  DiffuseLight.cpp  DiffuseLight.h  Isotropic.cpp  Isotropic.h  Lambertian.cpp  Lambertian.h  Metal.cpp  Metal.h  SurfaceNormal.cpp  SurfaceNormal.h
src/Objects/: BVHNode.cpp  BVHNode.h  BVHNode_MorePerformant.cpp  BVHNode_MorePerformant.h  Box.cpp  Box.h  ConstantMedium.cpp  ConstantMedium.h  HittableList.cpp  HittableList.h  MovingSphere.cpp  MovingSphere.h  Rectangles.cpp  Rectangles.h  Sphere.cpp  Sphere.h
src/Objects/Transform/: FlipFace.cpp  RotateY.cpp  RotateY.h  Translate.cpp  Translate.h
src/PDFs/: CosinePDF.cpp  CosinePDF.h  MixturePDF.cpp  MixturePDF.h
src/Scenes/: All.h  Book1.cpp  Book2.cpp  Book2.h  Book3.cpp  Book3.h  Fun.cpp  Fun.h
src/Textures/: CheckerTexture.cpp  CheckerTexture.h  ImageTexture.cpp  ImageTexture.h  NoiseTexture.cpp  NoiseTexture.h  SolidColor.cpp  SolidColor.h
src/Util/: ProgressBar.cpp  ProgressBar.h
(+2 files in other folders)
